<?xml version="1.0"?>
<package>
  <name>youbot_gazebo_control</name>
  <version>0.8.0</version>
  <description>Controller</description>

  <author email="frederik.hegger@h-brs.de">Frederik Hegger</author>
  <maintainer email="nss.nikolas@gmail.com">Nikolas Semenov</maintainer>

  <license>GPLv3</license>

  <url type="website">http://github.com/mas-group/youbot_simulation</url> -->

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>controller_manager</run_depend>

</package>
