<?xml version="1.0"?>
<package>
  <name>youbot_simulation</name>
  <version>0.8.0</version>
  <description>Packages to run the KUKA youBot in the Gazebo simulation with ROS</description>

  <author email="frederik.hegger@h-brs.de">Frederik Hegger</author>
  <maintainer email="nss.nikolas@gmail.com">Nikolas Semenov</maintainer>

  <license>GPLv3</license>

  <url type="website">http://github.com/mas-group/youbot_simulation</url> -->

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>youbot_gazebo_control</run_depend>
  <run_depend>youbot_gazebo_robot</run_depend>
  <run_depend>youbot_gazebo_worlds</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
